# armanip

./: .gitignore  Entorno.md  README.md
Manipuladores/advanced_robotics_ws/src/uma_arm_description/: package.xml
Manipuladores/advanced_robotics_ws/src/uma_arm_description/description/: ros2_control.xacro  uma_arm.urdf.xacro  uma_arm_gazebo.xacro  utils.xacro
Manipuladores/advanced_robotics_ws/src/uma_arm_description/launch/: uma_arm_sim.launch.py
Manipuladores/jupyter/: Ecuaciones.ipynb  FAQ.ipynb
Robots Móviles/P1/: Memoria Práctica 1.ipynb
Robots Móviles/P2/: Memoria Práctica 2.ipynb  P2Simulink.slx
Robots Móviles/P4/: Memoria Práctica 4.ipynb
Robots Móviles/P5/: grafos.mat
Robots Móviles/P6/: Memoria Práctica 6.ipynb
Robots Móviles/P7/: Memoria Práctica 7.ipynb
Robots_Móviles/P1/: P1Matlab.mlx  P1Simulink.slx
Robots_Móviles/P2/: DGPS.m  prueba.m
Robots_Móviles/P4/: campos_potenciales.m
Robots_Móviles/P5/: Dijkstra.m  Memoria_Práctica_5.ipynb
Robots_Móviles/P6/: aestrella.mlx
Robots_Móviles/P7/: nav_autonoma.m
advanced_robotics_ws/install/: local_setup.sh  setup.sh
advanced_robotics_ws/log/: latest_build
advanced_robotics_ws/plotjuggler/: lab21.xml
jupyter/: Ecuaciones.ipynb  FAQ.ipynb  Manipulators.ipynb
jupyter/.ipynb_checkpoints/: README-checkpoint.md  lab2-checkpoint.ipynb
jupyter/lab1/: lab1 Quaternion interpolation.ipynb  lab1.ipynb
jupyter/lab2/: lab2.ipynb
jupyter/lab3/: lab3.ipynb
jupyter/lab4/: lab4.ipynb
jupyter/lab5/: lab5.ipynb
matlab/lab1/: cartesian_planning.m  q2tr.m  qinv.m  qpinter.m  tr2zyz.m
(+126 files in other folders)
